@@ -193,7 +193,7 @@ public class SpawnerData {
 
     public void recalculateAfterConfigReload() {
         calculateStackBasedValues();
-        
+
         // Mark sell value as dirty after config reload since prices may have changed
         this.sellValueDirty = true;
         updateHologramData();
@@ -213,7 +213,7 @@ public class SpawnerData {
      */
     public void recalculateAfterAPIModification() {
         calculateStackBasedValues();
-        
+
         updateHologramData();
 
         // Invalidate GUI cache after API modifications
@@ -250,6 +250,8 @@ public class SpawnerData {
 
     public void setSpawnDelay(long baseSpawnerDelay) {
         this.spawnDelay = baseSpawnerDelay > 0 ? baseSpawnerDelay : 500;
+        long ticksWithBuffer = this.spawnDelay > Long.MAX_VALUE - 20L ? Long.MAX_VALUE : this.spawnDelay + 20L;
+        this.cachedSpawnDelay = ticksWithBuffer > Long.MAX_VALUE / 50L ? Long.MAX_VALUE : ticksWithBuffer * 50L;
         if (baseSpawnerDelay <= 0) {
             plugin.getLogger().warning("Invalid spawner delay value. Setting to default: 500 ticks (25s)");
         }
@@ -346,7 +348,7 @@ public class SpawnerData {
     }
 
     public void setSpawnerExp(long exp) {
-        this.spawnerExp = Math.min(Math.max(0L, exp), maxStoredExp);
+        this.spawnerExp = Math.clamp(exp, 0L, maxStoredExp);
         updateHologramData();
 
         // Invalidate GUI cache when experience changes
@@ -459,7 +461,7 @@ public class SpawnerData {
     }
 
     private boolean isLootItemValid(LootItem item) {
-        ItemStack example = item.createItemStack(ThreadLocalRandom.current());
+        ItemStack example = item.createItemStack();
         return example != null && !filteredItems.contains(example.getType());
     }
 
@@ -703,7 +705,7 @@ public class SpawnerData {
                 price = lootItem.sellPrice();
             }
             if (price > 0.0) {
-                ItemStack template = lootItem.createItemStack(new java.util.Random());
+                ItemStack template = lootItem.createItemStack();
                 if (template != null) {
                     String key = createItemKey(template);
                     cache.put(key, price);
